# docs/swagger.json
@@ -31,7 +31,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/api.AuctionListResponse"
+                            "$ref": "#/definitions/dto.AuctionListResponse"
                         }
                     }
                 }
@@ -60,13 +60,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/api.AuctionDetailResponse"
+                            "$ref": "#/definitions/dto.AuctionDetailResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/api.ErrorResponse"
+                            "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     }
                 }
@@ -95,13 +95,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/api.WalletResponse"
+                            "$ref": "#/definitions/dto.WalletResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/api.ErrorResponse"
+                            "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     }
                 }
@@ -121,7 +121,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/api.HealthResponse"
+                            "$ref": "#/definitions/dto.HealthResponse"
                         }
                     }
                 }
@@ -141,7 +141,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/api.ItemListResponse"
+                            "$ref": "#/definitions/dto.ItemListResponse"
                         }
                     }
                 }
@@ -171,7 +171,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/api.CreateItemRequest"
+                            "$ref": "#/definitions/dto.CreateItemRequest"
                         }
                     }
                 ],
@@ -179,19 +179,19 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/api.ItemResponse"
+                            "$ref": "#/definitions/dto.ItemResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/api.ErrorResponse"
+                            "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/api.ErrorResponse"
+                            "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     }
                 }
@@ -220,13 +220,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/api.ItemDetailResponse"
+                            "$ref": "#/definitions/dto.ItemDetailResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/api.ErrorResponse"
+                            "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     }
                 }
@@ -265,7 +265,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/api.OpenAuctionRequest"
+                            "$ref": "#/definitions/dto.OpenAuctionRequest"
                         }
                     }
                 ],
@@ -273,25 +273,25 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/api.AuctionResponse"
+                            "$ref": "#/definitions/dto.AuctionResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/api.ErrorResponse"
+                            "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/api.ErrorResponse"
+                            "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     },
                     "409": {
                         "description": "Conflict",
                         "schema": {
-                            "$ref": "#/definitions/api.ErrorResponse"
+                            "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     }
                 }
@@ -330,7 +330,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/api.PlaceBidRequest"
+                            "$ref": "#/definitions/dto.PlaceBidRequest"
                         }
                     }
                 ],
@@ -338,31 +338,31 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/api.BidResponse"
+                            "$ref": "#/definitions/dto.BidResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/api.ErrorResponse"
+                            "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     },
                     "402": {
                         "description": "Payment Required",
                         "schema": {
-                            "$ref": "#/definitions/api.ErrorResponse"
+                            "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/api.ErrorResponse"
+                            "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     },
                     "409": {
                         "description": "Conflict",
                         "schema": {
-                            "$ref": "#/definitions/api.ErrorResponse"
+                            "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     }
                 }
@@ -408,7 +408,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/api.CancelBidRequest"
+                            "$ref": "#/definitions/dto.CancelBidRequest"
                         }
                     }
                 ],
@@ -416,19 +416,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/api.StatusResponse"
+                            "$ref": "#/definitions/dto.StatusResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/api.ErrorResponse"
+                            "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/api.ErrorResponse"
+                            "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     }
                 }
@@ -467,7 +467,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/api.BuyRequest"
+                            "$ref": "#/definitions/dto.BuyRequest"
                         }
                     }
                 ],
@@ -475,31 +475,31 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/api.ListingResponse"
+                            "$ref": "#/definitions/dto.ListingResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/api.ErrorResponse"
+                            "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     },
                     "402": {
                         "description": "Payment Required",
                         "schema": {
-                            "$ref": "#/definitions/api.ErrorResponse"
+                            "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/api.ErrorResponse"
+                            "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     },
                     "409": {
                         "description": "Conflict",
                         "schema": {
-                            "$ref": "#/definitions/api.ErrorResponse"
+                            "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     }
                 }
@@ -538,7 +538,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/api.ListForSaleRequest"
+                            "$ref": "#/definitions/dto.ListForSaleRequest"
                         }
                     }
                 ],
@@ -546,25 +546,25 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/api.ListingResponse"
+                            "$ref": "#/definitions/dto.ListingResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/api.ErrorResponse"
+                            "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/api.ErrorResponse"
+                            "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     },
                     "409": {
                         "description": "Conflict",
                         "schema": {
-                            "$ref": "#/definitions/api.ErrorResponse"
+                            "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     }
                 }
@@ -572,29 +572,29 @@
         }
     },
     "definitions": {
-        "api.AuctionDetailResponse": {
+        "dto.AuctionDetailResponse": {
             "type": "object",
             "properties": {
                 "auction": {
-                    "$ref": "#/definitions/api.AuctionResponse"
+                    "$ref": "#/definitions/dto.AuctionResponse"
                 },
                 "highest_bid": {
-                    "$ref": "#/definitions/api.BidResponse"
+                    "$ref": "#/definitions/dto.BidResponse"
                 }
             }
         },
-        "api.AuctionListResponse": {
+        "dto.AuctionListResponse": {
             "type": "object",
             "properties": {
                 "auctions": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/api.AuctionResponse"
+                        "$ref": "#/definitions/dto.AuctionResponse"
                     }
                 }
             }
         },
-        "api.AuctionResponse": {
+        "dto.AuctionResponse": {
             "type": "object",
             "properties": {
                 "ends_at": {
@@ -629,7 +629,7 @@
                 }
             }
         },
-        "api.BidResponse": {
+        "dto.BidResponse": {
             "type": "object",
             "properties": {
                 "amount": {
@@ -654,7 +654,7 @@
                 }
             }
         },
-        "api.BuyRequest": {
+        "dto.BuyRequest": {
             "type": "object",
             "required": [
                 "buyer_guild_id"
@@ -666,7 +666,7 @@
                 }
             }
         },
-        "api.CancelBidRequest": {
+        "dto.CancelBidRequest": {
             "type": "object",
             "required": [
                 "bidder_guild_id"
@@ -678,7 +678,7 @@
                 }
             }
         },
-        "api.CreateItemRequest": {
+        "dto.CreateItemRequest": {
             "type": "object",
             "required": [
                 "name",
@@ -704,7 +704,7 @@
                 }
             }
         },
-        "api.ErrorResponse": {
+        "dto.ErrorResponse": {
             "type": "object",
             "properties": {
                 "error": {
@@ -713,7 +713,7 @@
                 }
             }
         },
-        "api.HealthResponse": {
+        "dto.HealthResponse": {
             "type": "object",
             "properties": {
                 "status": {
@@ -722,32 +722,32 @@
                 }
             }
         },
-        "api.ItemDetailResponse": {
+        "dto.ItemDetailResponse": {
             "type": "object",
             "properties": {
                 "auction": {
-                    "$ref": "#/definitions/api.AuctionResponse"
+                    "$ref": "#/definitions/dto.AuctionResponse"
                 },
                 "item": {
-                    "$ref": "#/definitions/api.ItemResponse"
+                    "$ref": "#/definitions/dto.ItemResponse"
                 },
                 "listing": {
-                    "$ref": "#/definitions/api.ListingResponse"
+                    "$ref": "#/definitions/dto.ListingResponse"
                 }
             }
         },
-        "api.ItemListResponse": {
+        "dto.ItemListResponse": {
             "type": "object",
             "properties": {
                 "items": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/api.ItemResponse"
+                        "$ref": "#/definitions/dto.ItemResponse"
                     }
                 }
             }
         },
-        "api.ItemResponse": {
+        "dto.ItemResponse": {
             "type": "object",
             "properties": {
                 "id": {
@@ -780,7 +780,7 @@
                 }
             }
         },
-        "api.ListForSaleRequest": {
+        "dto.ListForSaleRequest": {
             "type": "object",
             "required": [
                 "price",
@@ -797,7 +797,7 @@
                 }
             }
         },
-        "api.ListingResponse": {
+        "dto.ListingResponse": {
             "type": "object",
             "properties": {
                 "buyer_guild_id": {
@@ -825,7 +825,7 @@
                 }
             }
         },
-        "api.OpenAuctionRequest": {
+        "dto.OpenAuctionRequest": {
             "type": "object",
             "required": [
                 "seller_guild_id"
@@ -837,7 +837,7 @@
                 }
             }
         },
-        "api.PlaceBidRequest": {
+        "dto.PlaceBidRequest": {
             "type": "object",
             "required": [
                 "amount",
@@ -854,7 +854,7 @@
                 }
             }
         },
-        "api.StatusResponse": {
+        "dto.StatusResponse": {
             "type": "object",
             "properties": {
                 "status": {
@@ -863,7 +863,7 @@
                 }
             }
         },
-        "api.WalletResponse": {
+        "dto.WalletResponse": {
             "type": "object",
             "properties": {
                 "available": {
